--- a/libjodycode.7
+++ b/libjodycode.7
@@ -25,6 +25,8 @@ libjodycode \- shared code used by several tools written by Jody Bruchon
 .SS "jodyhash API"
 .nf
 .BI "int jc_block_hash(jodyhash_t *" data ", jodyhash_t *" hash ", const size_t " count ")"
+.IP JODY_HASH_VERSION 20
+version of jody_hash the library currently uses
 
 .SS "OOM (out-of-memory) API"
 .nf
@@ -70,6 +72,30 @@ libjodycode \- shared code used by several tools written by Jody Bruchon
 .BI "time_t jc_unixtime_to_nttime(const uint64_t * const restrict " timestamp ")"
 .BI "int jc_win_stat(const char * const " filename ", struct jc_winstat * const restrict " buf ")"
 
+.SS "Windows stat() mode test definitions"
+.IP S_ISARCHIVE(st_mode) 22
+is Windows archive attribute set?
+.IP S_ISRO(st_mode) 22
+is Windows read-only attribute set?
+.IP S_ISHIDDEN(st_mode) 22
+is Windows hidden attribute set?
+.IP S_ISSYSTEM(st_mode) 22
+is Windows system attribute set?
+.IP S_ISCRYPT(st_mode) 22
+is it a Windows encrypted file/dir?
+.IP S_ISDIR(st_mode) 22
+is it a directory?
+.IP S_ISCOMPR(st_mode) 22
+Windows compressed attribute set
+.IP S_ISREPARSE(st_mode) 22
+is it a Windows reparse point?
+.IP S_ISSPARSE(st_mode) 22
+is it a Windows sparse file?
+.IP S_ISTEMP(st_mode) 22
+is it a Windows temporary file?
+.IP S_ISREG(st_mode) 22
+is it a regular file?
+
 .SS "Windows Unicode API"
 .nf
 .BI "int jc_access(const char *" pathname ", int " mode ")"
@@ -79,6 +105,43 @@ libjodycode \- shared code used by several tools written by Jody Bruchon
 .BI "int jc_string_to_wstring(const char *" string ", JC_WCHAR_T **" wstring ")"
 .BI "int jc_fwprint(FILE * const restrict " stream ", const char * const restrict " str ", const int " cr ")"
 .BI "int jc_widearg_to_argv(int " argc ", JC_WCHAR_T **" wargv ", char **" argv ")"
+
+.SS "Windows Unicode wide equivalence definitions"
+.nf
+.IP JC_WCHAR_T 31
+wchar_t for Windows Unicode, char otherwise
+.IP JC_FILE_MODE_RDONLY 31
+string "rb"
+.IP JC_FILE_MODE_WRONLY 31
+string "wb"
+.IP JC_FILE_MODE_RW 31
+string "w+b"
+.IP JC_FILE_MODE_RW_EXISTING 31
+string "r+b"
+.IP JC_FILE_MODE_WRONLY_APPEND 31
+string "ab"
+.IP JC_FILE_MODE_RW_APPEND 31
+string "a+b"
+.IP JC_FILE_MODE_RDONLY_SEQ 31
+string "rbS" (Windows) or "rb"
+.IP JC_FILE_MODE_WRONLY_SEQ 31
+string "wbS" (Windows) or "wb"
+.IP JC_FILE_MODE_RW_SEQ 31
+string "w+bS" (Windows) or "w+b"
+.IP JC_FILE_MODE_RW_EXISTING_SEQ 31
+string "r+bS" (Windows) or "r+b"
+.IP JC_FILE_MODE_WRONLY_APPEND_SEQ 31
+string "abS" (Windows) or "ab"
+.IP JC_FILE_MODE_RW_APPEND_SEQ 31
+string "a+bS" (Windows) or "a+b"
+.IP JC_F_OK 10
+unistd.h F_OK
+.IP JC_R_OK 10
+unistd.h R_OK
+.IP JC_W_OK 10
+unistd.h W_OK
+.IP JC_X_OK 10
+unistd.h X_OK
 
 .PP
 .SH DESCRIPTION
