--- a/libjodycode.7
+++ b/libjodycode.7
@@ -100,10 +100,11 @@ is it a regular file?
 .nf
 .BI "int jc_access(const char *" pathname ", int " mode ")"
 .BI "FILE *jc_fopen(const char *" pathname ", const JC_WCHAR_T *" mode ")"
-.BI "void jc_slash_convert(char *" path ")"
-.BI "void jc_set_output_modes(unsigned int " modes ")"
-.BI "int jc_string_to_wstring(const char * const restrict " string ", JC_WCHAR_T **" wstring ")"
 .BI "int jc_fwprint(FILE * const restrict " stream ", const char * const restrict " str ", const int " cr ")"
+.BI "int jc_rename(const char * const restrict " oldpath ", const char * restrict " newpath ")"
+.BI "void jc_set_output_modes(unsigned int " modes ")"
+.BI "void jc_slash_convert(char *" path ")"
+.BI "int jc_string_to_wstring(const char * const restrict " string ", JC_WCHAR_T **" wstring ")"
 .BI "int jc_widearg_to_argv(int " argc ", JC_WCHAR_T **" wargv ", char **" argv ")"
 
 .SS "Windows Unicode wide equivalence definitions"
