Add jc_link() and jc_remove()

--- a/libjodycode.7
+++ b/libjodycode.7
@@ -101,7 +101,9 @@ is it a regular file?
 .BI "int jc_access(const char *" pathname ", int " mode ")"
 .BI "FILE *jc_fopen(const char *" pathname ", const JC_WCHAR_T *" mode ")"
 .BI "int jc_fwprint(FILE * const restrict " stream ", const char * const restrict " str ", const int " cr ")"
+.BI "int jc_link(const char *" path1 ", const char *" path2 ");"
 .BI "int jc_rename(const char * const restrict " oldpath ", const char * restrict " newpath ")"
+.BI "int jc_remove(const char *" pathname ")"
 .BI "void jc_set_output_modes(unsigned int " modes ")"
 .BI "void jc_slash_convert(char *" path ")"
 .BI "int jc_string_to_wstring(const char * const restrict " string ", JC_WCHAR_T **" wstring ")"
