Remove GitHub and replace with Codeberg; add website

--- a/libjodycode.7
+++ b/libjodycode.7
@@ -168,7 +168,9 @@ all of them into a single reusable shared library.
 
 libjodycode is created and maintained by Jody Bruchon <jody@jodybruchon.com>
 
-Bug reports/feature requests: https://github.com/jbruchon/libjodycode/issues
+General information, help, and tech info: https://www.jdupes.com/
+
+Development, source code, releases: https://codeberg.org/jbruchon/libjodycode
 
 If you find this software useful, please consider financially supporting
 its development through the author's home page:
