numstrcmp: add case sensitivity switch

--- a/libjodycode.7
+++ b/libjodycode.7
@@ -54,7 +54,7 @@ version of jody_hash the library currently uses
 
 .SS "Numerically correct string comparison API"
 .nf
-.BI "int jc_numeric_strcmp(char * restrict " c1 ", char * restrict " c2 ")"
+.BI "int jc_numeric_strcmp(char * restrict " c1 ", char * restrict " c2 ", int " insensitive ")"
 
 .SS "String API"
 .nf
