--- a/libjodycode.7
+++ b/libjodycode.7
@@ -1,5 +1,5 @@
-.\" Copyright (C) 2023 by Jody Bruchon <jody@jodybruchon.com>
-.TH "LIBJODYCODE" "7" "2023-07-05" "3.1" "libjodycode"
+.\" Copyright (C) 2023-2024 by Jody Bruchon <jody@jodybruchon.com>
+.TH "LIBJODYCODE" "7" "2024-01-21" "4.0" "libjodycode"
 .SH NAME
 libjodycode \- shared code used by several tools written by Jody Bruchon
 
@@ -181,7 +181,7 @@ https://www.jodybruchon.com/
 
 MIT License
 
-Copyright (c) 2014-2023 Jody Lee Bruchon <jody@jodybruchon.com>
+Copyright (c) 2014-2024 Jody Lee Bruchon <jody@jodybruchon.com>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
